tests/sksl/errors/ReservedNameGoto.glsl
### Compilation failed:

error: 1: 'goto' is a reserved word
int goto;
    ^^^^
1 error
